# docker-training

./: pyproject.toml  requirements.txt
