[tool.poetry]
name = "simple-api"
version = "0.1.0"
description = ""
authors = ["Sudip Ghimire <sudipghimire@cagtu.ocm>"]
readme = "README.md"
packages = [{include = "simple_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
